# hb-os

./: .gitignore  Makefile  README.md  install-dependencies.sh  launch.py  launch.sh  libslirp-dev.deb  run  run.py
_unfinished/: common.py  setup_guest.py
config/: config.json  config.py  server.jsonc  template-user-data
config/servers/: compute.jsonc  router.jsonc
examples/: vm-config-template.toml
examples/servers/: greenzone_guest.jsonc  greenzone_host.jsonc  router.jsonc  volume.jsonc
guest-vm/: setup_verity.sh
guest-vm/hb/: Dockerfile  hyperbeam.service  release.sh
initramfs/: Dockerfile  init.sh
resources/: base_setup.sh  content.Dockerfile  cu.service  hyperbeam.service  initramfs.Dockerfile
resources/cu/: cu.env  cu.service
resources/hyperbeam/: config.flat
scripts/: base_setup.sh  gpu_passthrough.sh  init.sh  node_api.py  post_start.py
src/: build_content.py  build_initramfs.py  common.py  create_new_vm.py  create_vm_config.py  dependencies.py  setup_guest.py  setup_verity.sh
src/attestation/: attest-verity.sh
src/guest-vm/: setup_verity.sh
src/hb/: Dockerfile  hyperbeam.service  release.sh
tools/attestation_server/examples/: vm-config.toml
tools/digest_calc/: Cargo.toml
tools/digest_calc/src/: main.rs
