[package]
name = "digest_calc"
version = "0.1.0"
edition = "2021"

[dependencies]
sev = { git = "https://github.com/PeterFarber/sev.git", features = ["openssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex-buffer-serde = "0.4.0"
toml = "0.8.19"
openssl = "0.10.66"
bincode = "1.3"
clap = { version = "4.5.3", features = ["derive"] }
snafu = "0.8.2"
bitfield = "0.18.1"